feat: add header and services layout, fonts, images

--- a/singolo1.html
+++ b/singolo1.html
@@ -1,12 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="singolo1.css">
-    <title>Singolo</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="singolo1.css">
+  <title>Singolo</title>
 </head>
+
 <body>
-    
+  <div class="wrapper">
+    <header class="header">
+      <h1 class="logo">
+        <a href="#" class="logo__link">SINGOLO<span class="logo_colored">*</span></a>
+      </h1>
+      <nav class="menu">
+        <ul class="menu__list">
+          <li class="menu__item"><a href="#" class="menu__link  menu_active">Home</a></li>
+          <li class="menu__item"><a href="#" class="menu__link">Services</a></li>
+          <li class="menu__item"><a href="#" class="menu__link">Portfolio</a></li>
+          <li class="menu__item"><a href="#" class="menu__link">About</a></li>
+          <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="slider">
+        <div class="navigation">
+          <div class="navigation__button"><span class="navigation__arrow_left"></span></div>
+          <div class="navigation__button"><span class="navigation__arrow_right"></span></div>
+        </div>
+      </section>
+    </main>
+    <section class="services">
+      <h2 class="services__title">Our Services</h2>
+      <p class="services__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis,
+        non commodo luctus, nisi erat
+        porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+        condimentum nibh.</p>
+      <div class="column-3-layout">
+        <div class="service">
+          <div class="service__img">
+            <img src="assets/img/services/pen.png" alt="Pen icon" width="33" height="33">
+          </div>
+          <div class="service__description">
+            <h3 class="service__title">Custom Design</h3>
+            <p class="service__text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra
+              lacus ut, ultrices velit.</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service__img">
+            <img src="assets/img/services/bulb.png" alt="Bulb icon" width="33" height="33">
+          </div>
+          <div class="service__description">
+            <h3 class="service__title">Inovative Ideas</h3>
+            <p class="service__text">Quisque luctus, quam eget molestie com- modo, lacus purus cursus purus, nec rutrum
+              tellus dolor id lorem.</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service__img">
+            <img src="assets/img/services/heart.png" alt="Heart icon" width="33" height="33">
+          </div>
+          <div class="service__description">
+            <h3 class="service__title">Love Is The Answer</h3>
+            <p class="service__text">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat
+              felis. Quisque condimentum.</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service__img">
+            <img src="assets/img/services/phone.png" alt="Phone icon" width="33" height="33">
+          </div>
+          <div class="service__description">
+            <h3 class="service__title">Responsive Layout</h3>
+            <p class="service__text">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula.
+              Prae-sent elit leo.</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service__img">
+            <img src="assets/img/services/bubble.png" alt="Bubble icon" width="33" height="33">
+          </div>
+          <div class="service__description">
+            <h3 class="service__title">24 / 7 Support</h3>
+            <p class="service__text">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat.
+              Pellen-tesque egestas venenatis lorem .</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service__img">
+            <img src="assets/img/services/star.png" alt="Star icon" width="33" height="33">
+          </div>
+          <div class="service__description">
+            <h3 class="service__title">Feel Like A Star</h3>
+            <p class="service__text">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae
+              aliquam tellus.</p>
+          </div>
+        </div>
+      </div>
+  </div>
+  </section>
 </body>
+
 </html>
