--- a/singolo1.html
+++ b/singolo1.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="singolo1.css">
   <title>Singolo</title>
 </head>
@@ -39,7 +40,6 @@
         </div>
         <div class="slider__button slider__button_right"></span></div>
       </section>
-
       <section class="services">
         <h2 class="services__title">Our Services</h2>
         <p class="services__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
