feat: add about us layout

--- a/singolo2.html
+++ b/singolo2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./singolo2.css">
     <title>Singolo2</title>
 </head>
+
 <body>
     <div class="wrapper">
         <main>
@@ -21,7 +22,7 @@
                     <li class="portfolio__filter__tag">Graphic Design</li>
                     <li class="portfolio__filter__tag">Artwork</li>
                 </ul>
-                <div class="column-4-layout">
+                <div class="column-4-layout portfolio__layout">
                     <img src="./assets/img/portfolio/Project 1.png" alt="Project 1" class="portfolio__item" width="220"
                         height="187">
                     <img src="./assets/img/portfolio/Project 2.png" alt="Project 2" class="portfolio__item" width="220"
@@ -56,44 +57,95 @@
                 <div class="team">
                     <div class="column-3-layout">
                         <div class="team__member">
-                            <img src="./assets/img/about-us/adam jensen.png" alt="Adam Jensen" class="team__member__photo" width="300" height="300">
+                            <img src="./assets/img/about-us/adam jensen.png" alt="Adam Jensen"
+                                class="team__member__photo" width="300" height="300">
                             <h4 class="team__member__name">Adam Jensen</h4>
                             <p class="team__member__description">Quisque luctus, quam eget molestie commodo, lacus purus
                                 cursus purus, nec rutrum tellus dolor id lorem.</p>
                             <div class="socials">
                                 <ul class="socials__icons">
-                                    <li class="socials__icon"></li>
-                                    <li class="socials__icon"></li>
-                                    <li class="socials__icon"></li>
-                                    <li class="socials__icon"></li>
+                                    <li>
+                                        <button class="socials__button">
+                                            <div class="socials__icon socials__icon_facebook"></div>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="socials__button">
+                                            <div class="socials__icon socials__icon_google-plus""></div>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="socials__button">
+                                            <div class="socials__icon socials__icon_twitter"></div>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="socials__button ">
+                                            <div class="socials__icon socials__icon_linkedin"></div>
+                                        </button>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
                         <div class="team__member">
-                            <img src="./assets/img/about-us/desmond miles.png" alt="Desmond Miles" class="team__member__photo" width="300" height="300">
+                            <img src="./assets/img/about-us/desmond miles.png" alt="Desmond Miles"
+                                class="team__member__photo" width="300" height="300">
                             <h4 class="team__member__name">Desmond Miles</h4>
                             <p class="team__member__description">Curabitur vestibulum eget mauris quis laoreet.
                                 Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
                             <div class="socials">
                                 <ul class="socials__icons">
-                                    <li class="socials__icon"></li>
-                                    <li class="socials__icon"></li>
-                                    <li class="socials__icon"></li>
-                                    <li class="socials__icon"></li>
+                                    <li>
+                                        <button class="socials__button">
+                                            <div class="socials__icon socials__icon_facebook"></div>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="socials__button">
+                                            <div class="socials__icon socials__icon_google-plus""></div>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="socials__button">
+                                            <div class="socials__icon socials__icon_twitter"></div>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="socials__button ">
+                                            <div class="socials__icon socials__icon_linkedin"></div>
+                                        </button>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
                         <div class="team__member">
-                            <img src="./assets/img/about-us/scolara visari.png" alt="Scolara Visari" class="team__member__photo" width="300" height="300">
+                            <img src="./assets/img/about-us/scolara visari.png" alt="Scolara Visari"
+                                class="team__member__photo" width="300" height="300">
                             <h4 class="team__member__name">Scolara Visari</h4>
                             <p class="team__member__description">Nulla sed nunc et tortor luctus faucibus. Morbi at
                                 aliquet turpis, et consequat felis. Quisque condimentum.</p>
                             <div class="socials">
                                 <ul class="socials__icons">
-                                    <li class="socials__icon"></li>
-                                    <li class="socials__icon"></li>
-                                    <li class="socials__icon"></li>
-                                    <li class="socials__icon"></li>
+                                    <li>
+                                        <button class="socials__button">
+                                            <div class="socials__icon socials__icon_facebook"></div>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="socials__button">
+                                            <div class="socials__icon socials__icon_google-plus""></div>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="socials__button">
+                                            <div class="socials__icon socials__icon_twitter"></div>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="socials__button ">
+                                            <div class="socials__icon socials__icon_linkedin"></div>
+                                        </button>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
