feat: add contacts us and footer

--- a/singolo3.html
+++ b/singolo3.html
@@ -19,11 +19,11 @@
                     dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
                 <div class="column-2-layout">
                     <form action="#" class="contacts__form">
-                        <input class="contacts__form__name" type="text" name="name" required>
-                        <input class="contacts__form__mail" type="text" name="mail" required>
-                        <input class="contacts__form__subject" type="text" name="subject">
-                        <textarea name="message" cols="30" rows="13"></textarea>
-                        <input type="submit" value="Submit">
+                        <input class="contacts__form__name" type="text" name="name" placeholder="Name (Required)" required>
+                        <input class="contacts__form__mail" type="text" name="mail" placeholder="Email (Required)" required>
+                        <input class="contacts__form__subject" type="text" name="subject" placeholder="Subject">
+                        <textarea class="contacts__form__message" name="message" cols="30" rows="13">Describe your project in detail...</textarea>
+                        <input class="contacts__form__submit" type="submit" value="Submit">
                     </form>
                     <div class="contacts__information">
                         <h3 class="contacts__information__title">Contact Information</h3>
@@ -55,7 +55,7 @@
                             </button>
                         </li>
                         <li>
-                            <button class="socials__button ">
+                            <button class="socials__button">
                                 <div class="socials__icon socials__icon_linkedin"></div>
                             </button>
                         </li>
