fix: some fixes from new task

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce
           dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
         <div class="column-2-layout">
-          <form action="#" class="contacts__form">
+          <form name="contacts__form" action="#" class="contacts__form">
             <input class="contacts__form__name" type="text" name="name" placeholder="Name (Required)"
               pattern="[a-zA-Zа-яА-Я]*" required>
             <input class="contacts__form__mail" type="email" name="mail" placeholder="Email (Required)" required>
