feat: add responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
   <div class="wrapper">
     <header class="header">
+      <div class="header__mobile_background"></div>
+      <img src="./assets/img/menu/burger-menu-icon.svg" alt="burger icon" class="burger_button">
       <h1 class="logo">
         <a href="#" class="logo__link">SINGOLO</a>
       </h1>
@@ -42,7 +44,8 @@
             </div>
           </div>
           <div class="slider__item slider__second">
-            <div class="slider__second__image"></div>
+            <img class="slider__second__image" src="./assets/img/slider/Slide-2.png" alt="Slide 2">
+            <!-- <div class="slider__second__image"></div> -->
           </div>
         </div>
         <div class="slider__button slider__button_right"></div>
@@ -128,30 +131,18 @@
           <li class="portfolio__filter__tag">Artwork</li>
         </ul>
         <div class="column-4-layout portfolio__layout">
-          <img src="./assets/img/portfolio/Project1.png" alt="Project 1" class="portfolio__item" width="220"
-            height="187">
-          <img src="./assets/img/portfolio/Project2.png" alt="Project 2" class="portfolio__item" width="220"
-            height="187">
-          <img src="./assets/img/portfolio/Project3.png" alt="Project 3" class="portfolio__item" width="220"
-            height="187">
-          <img src="./assets/img/portfolio/Project4.png" alt="Project 4" class="portfolio__item" width="220"
-            height="187">
-          <img src="./assets/img/portfolio/Project5.png" alt="Project 5" class="portfolio__item" width="220"
-            height="187">
-          <img src="./assets/img/portfolio/Project6.png" alt="Project 6" class="portfolio__item" width="220"
-            height="187">
-          <img src="./assets/img/portfolio/Project7.png" alt="Project 7" class="portfolio__item" width="220"
-            height="187">
-          <img src="./assets/img/portfolio/Project8.png" alt="Project 8" class="portfolio__item" width="220"
-            height="187">
-          <img src="./assets/img/portfolio/Project9.png" alt="Project 9" class="portfolio__item" width="220"
-            height="187">
-          <img src="./assets/img/portfolio/Project10.png" alt="Project 10" class="portfolio__item" width="220"
-            height="187">
-          <img src="./assets/img/portfolio/Project11.png" alt="Project 11" class="portfolio__item" width="220"
-            height="187">
-          <img src="./assets/img/portfolio/Project12.png" alt="Project 12" class="portfolio__item" width="220"
-            height="187">
+          <img src="./assets/img/portfolio/Project1.png" alt="Project 1" class="portfolio__item">
+          <img src="./assets/img/portfolio/Project2.png" alt="Project 2" class="portfolio__item">
+          <img src="./assets/img/portfolio/Project3.png" alt="Project 3" class="portfolio__item">
+          <img src="./assets/img/portfolio/Project4.png" alt="Project 4" class="portfolio__item">
+          <img src="./assets/img/portfolio/Project5.png" alt="Project 5" class="portfolio__item">
+          <img src="./assets/img/portfolio/Project6.png" alt="Project 6" class="portfolio__item">
+          <img src="./assets/img/portfolio/Project7.png" alt="Project 7" class="portfolio__item">
+          <img src="./assets/img/portfolio/Project8.png" alt="Project 8" class="portfolio__item">
+          <img src="./assets/img/portfolio/Project9.png" alt="Project 9" class="portfolio__item">
+          <img src="./assets/img/portfolio/Project10.png" alt="Project 10" class="portfolio__item">
+          <img src="./assets/img/portfolio/Project11.png" alt="Project 11" class="portfolio__item">
+          <img src="./assets/img/portfolio/Project12.png" alt="Project 12" class="portfolio__item">
         </div>
       </section>
       <section class="about-us" id="about-us">
@@ -160,10 +151,9 @@
           mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce
           dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
         <div class="team">
-          <div class="column-3-layout">
+          <div class="column-3-layout team__layout">
             <div class="team__member">
-              <img src="./assets/img/about-us/adam_jensen.png" alt="Adam Jensen" class="team__member__photo" width="300"
-                height="300">
+              <img src="./assets/img/about-us/adam_jensen.png" alt="Adam Jensen" class="team__member__photo">
               <h4 class="team__member__name">Adam Jensen</h4>
               <p class="team__member__description">Quisque luctus, quam eget molestie commodo, lacus purus
                 cursus purus, nec rutrum tellus dolor id lorem.</p>
@@ -193,8 +183,7 @@
               </div>
             </div>
             <div class="team__member">
-              <img src="./assets/img/about-us/desmond_miles.png" alt="Desmond Miles" class="team__member__photo"
-                width="300" height="300">
+              <img src="./assets/img/about-us/desmond_miles.png" alt="Desmond Miles" class="team__member__photo">
               <h4 class="team__member__name">Desmond Miles</h4>
               <p class="team__member__description">Curabitur vestibulum eget mauris quis laoreet.
                 Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
@@ -224,8 +213,7 @@
               </div>
             </div>
             <div class="team__member">
-              <img src="./assets/img/about-us/scolara_visari.png" alt="Scolara Visari" class="team__member__photo"
-                width="300" height="300">
+              <img src="./assets/img/about-us/scolara_visari.png" alt="Scolara Visari" class="team__member__photo">
               <h4 class="team__member__name">Scolara Visari</h4>
               <p class="team__member__description">Nulla sed nunc et tortor luctus faucibus. Morbi at
                 aliquet turpis, et consequat felis. Quisque condimentum.</p>
@@ -262,7 +250,7 @@
         <p class="contacts__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
           mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce
           dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        <div class="column-2-layout">
+        <div class="column-2-layout contacts__layout">
           <form name="contacts__form" action="#" class="contacts__form">
             <input class="contacts__form__name" type="text" name="name" placeholder="Name (Required)"
               pattern="[a-zA-Zа-яА-Я]*" required>
@@ -311,6 +299,7 @@
         </ul>
       </div>
     </footer>
+
   </div>
   <script src="./script.js"></script>
 </body>
